# Python-productor-y-modelos-de-consumo

./: README.md  main.py  pyproject.toml
