[tool.poetry]
name = "repl_python3_Python-productor-y-modelos-de-consumo-2"
version = "0.1.0"
description = ""
authors = ["CarlotaMartinAn <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
